add: section first-screen

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,10 @@
         </div>
       </div>
     </header>
+    <section class="first-screen">
+      <div class="first-screen__logo"><img src="img/logo_city.png" alt="PORTEN Санкт-Петербург"/></div>
+      <p class="first-screen__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.</p>
+    </section>
     <footer class="footer">
       <div class="footer__info">
         <div class="container container--footer">
@@ -77,9 +81,9 @@
           <div class="footer__item footer__item--mailing col-4">
             <h3 class="footer__title">Рассылка</h3>
             <p class="footer__text footer__text--mailing">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.</p>
-            <form class="footer__form">
+            <form class="footer__form" id="mailing">
               <input class="mailing-form" type="text" placeholder="Ваша почта"/>
-              <button class="black-button">подписаться</button>
+              <button class="black-button" type="submit" form="mailing">подписаться</button>
             </form>
           </div>
         </div>
