--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,33 @@
     </header>
     <section class="first-screen">
       <div class="first-screen__logo"><img src="img/logo_city.png" alt="PORTEN Санкт-Петербург"/></div>
-      <p class="first-screen__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.</p>
+      <p class="first-screen__text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
+        
+      </p>
+    </section>
+    <section class="new">
+      <div class="new__season col-6">
+        <h2 class="new__title">СЕЗОН 2020/21</h2>
+        <div class="new__products col-12">
+          <div class="new__item">
+            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          </div>
+          <div class="new__item">
+            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          </div>
+          <div class="new__item">
+            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          </div>
+        </div>
+      </div>
+      <div class="new__collection col-6">
+        <h2 class="new__title">Новая коллекция</h2>
+        <button class="transparent-button">Каталог</button>
+      </div>
     </section>
     <footer class="footer">
       <div class="footer__info">
