--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,14 @@
         <button class="transparent-button">Каталог</button>
       </div>
     </section>
+    <section class="last-collection">
+      <div class="last-collection__img col-6"><img src="img/last_collection.jpg" alt="collection-2018"/></div>
+      <div class="last-collection__info col-6">
+        <h2 class="last-collection__title">коллекция 2018</h2>
+        <p class="last-collection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. </p>
+        <button class="transparent-button">посмотреть коллекцию</button>
+      </div>
+    </section>
     <footer class="footer">
       <div class="footer__info">
         <div class="container container--footer">
