--- a/src/index.html
+++ b/src/index.html
@@ -68,17 +68,17 @@
       <div class="new__season col-6">
         <h2 class="new__title">СЕЗОН 2020/21</h2>
         <div class="new__products col-12">
-          <div class="new__item">
-            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          <div class="new__item item">
+            <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
           </div>
-          <div class="new__item">
-            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          <div class="new__item item">
+            <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item_price">165 000 руб.</span></div>
           </div>
-          <div class="new__item">
-            <div class="new__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info"><span class="new__model">Louis XVI ATHOS</span><span class="new__price">165 000 руб.</span></div>
+          <div class="new__item item">
+            <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
           </div>
         </div>
       </div>
@@ -95,6 +95,45 @@
         <button class="transparent-button">посмотреть коллекцию</button>
       </div>
     </section>
+    <div class="container">
+      <section class="new-goods">
+        <h2 class="new-goods__title">новые поступления</h2>
+        <div class="new-goods__products col-12">
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+          <div class="new-goods__item item">
+            <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
+          </div>
+        </div>
+      </section>
+    </div>
     <footer class="footer">
       <div class="footer__info">
         <div class="container container--footer">
