--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,17 @@
         </div>
       </section>
     </div>
+    <section class="our-brands">
+      <div class="container container--brands">
+        <h2 class="our-brands__title">наши бренды</h2>
+        <div class="our-brands__list col-12">
+          <div class="our-brands__img"><img src="img/brands_logo.png" alt="COCO Fine jewelry"/></div>
+          <div class="our-brands__img"><img src="img/brands_logo.png" alt="COCO Fine jewelry"/></div>
+          <div class="our-brands__img"><img src="img/brands_logo.png" alt="COCO Fine jewelry"/></div>
+          <div class="our-brands__img"><img src="img/brands_logo.png" alt="COCO Fine jewelry"/></div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="footer__info">
         <div class="container container--footer">
