fix: items links

--- a/src/index.html
+++ b/src/index.html
@@ -67,20 +67,13 @@
     <section class="new">
       <div class="new__season col-6">
         <h2 class="new__title">СЕЗОН 2020/21</h2>
-        <div class="new__products col-12">
-          <div class="new__item item">
+        <div class="new__products col-12"><a class="new__item item" href="#">
             <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new__item item">
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new__item item" href="#">
             <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item_price">165 000 руб.</span></div>
-          </div>
-          <div class="new__item item">
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item_price">165 000 руб.</span></div></a><a class="new__item item" href="#">
             <div class="new__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-        </div>
+            <div class="new__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a></div>
       </div>
       <div class="new__collection col-6">
         <h2 class="new__title">Новая коллекция</h2>
@@ -98,40 +91,23 @@
     <div class="container">
       <section class="new-goods">
         <h2 class="new-goods__title">новые поступления</h2>
-        <div class="new-goods__products col-12">
-          <div class="new-goods__item item">
+        <div class="new-goods__products col-12"><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-          <div class="new-goods__item item">
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a><a class="new-goods__item item" href="#">
             <div class="new-goods__img item__img"><img src="img/watch.png" alt="Louis XVI ATHOS"/></div>
-            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div>
-          </div>
-        </div>
+            <div class="new-goods__info item__info"><span class="item__model">Louis XVI ATHOS</span><span class="item__price">165 000 руб.</span></div></a></div>
       </section>
     </div>
     <section class="our-brands">
