--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,8 @@
       <div class="footer__contacts">
         <div class="container container--footer"><span class="footer__copyright">© 2020 Все права защищены</span><span class="footer__editor">Сделано Figma.info</span></div>
       </div>
-    </footer>
+    </footer><script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
